deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: pytorch/pytorch:1.9.0-cuda11.1-cudnn8-devel
          command: ["jupyter", "notebook", "--ip=0.0.0.0", "--port=80", "--no-browser", "--allow-root", "--NotebookApp.token=''", "--NotebookApp.password=''"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: notebook
              mountPath: /workspace
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: notebook
          hostPath:
            path: /home/user/notebooks
