jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jupyter
  name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jupyter
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ml-service-default: "true"
        io.kompose.service: jupyter
    spec:
      containers:
        - args:
            - jupyter
            - notebook
            - --ip=0.0.0.0
            - --port=80
            - --no-browser
            - --allow-root
            - --NotebookApp.token=''
            - --NotebookApp.password=''
          image: jupyter
          name: jupyter
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /workspace
              name: jupyter-claim0
      restartPolicy: Always
      volumes:
        - name: jupyter-claim0
          persistentVolumeClaim:
            claimName: jupyter-claim0
status: {}
