service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  selector:
    app: jupyter
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
