jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 192.168.1.19
      http:
        paths:
          - path: /jupyter
            pathType: Prefix
            backend:
              service:
                name: jupyter-service
                port:
                  name: http
